プロジェクト名をmemoworldに修正

--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PBL-D-2018-b2</name>
-	<comment>Project lama created by Buildship.</comment>
+	<name>memoworld</name>
+	<comment>Project memoworld created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
