--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies{
     compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.25.1'
     compile 'org.glassfish.jersey.media:jersey-media-moxy:2.25.1'
     compile 'org.mongodb:mongo-java-driver:3.4.1'
+    compile 'com.drewnoakes:metadata-extractor:2.11.0'
     
     providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
 
