--- a/build.gradle
+++ b/build.gradle
@@ -36,9 +36,8 @@ dependencies{
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'org.exparity:hamcrest-date:2.0.4'
     testCompile 'org.mockito:mockito-core:2.8.9'
-    testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '1.7.3'
-    testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '1.7.3'
-    testCompile 'io.rest-assured:rest-assured:3.2.0'
+    testCompile 'org.powermock:powermock-module-junit4:1.7.3'
+    testCompile 'org.powermock:powermock-api-mockito2:1.7.3'
 }
 
 def path = "/${rootProject.name}"
